--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,9 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: Portfolio_development
+  database: portfolio_development
   pool: 5
-  username: Ykat
+  username: alexlin
   password:
   host: localhost
 
@@ -42,17 +42,17 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: Portfolio_test
+  database: portfolio_test
   pool: 5
-  username: Ykat
+  username: alexlin
   password:
   host: localhost
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: Portfolio_production
+  database: portfolio_production
   pool: 5
-  username: Ykat
+  username: alexlin
   password:
   host: localhost
